// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`misc_sanity.sql > line 60 1`] = `
[
  "SELECT relname
FROM pg_class
WHERE relnamespace = 'pg_catalog'::regnamespace AND relkind = 'r'
      AND pg_class.oid NOT IN (SELECT indrelid FROM pg_index WHERE indisprimary)
ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 20,
                  "relname": "pg_class",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 185,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "relname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "relnamespace",
                              },
                            },
                          ],
                          "location": 35,
                        },
                      },
                      "location": 48,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 50,
                              "sval": {
                                "sval": "pg_catalog",
                              },
                            },
                          },
                          "location": 62,
                          "typeName": {
                            "location": 64,
                            "names": [
                              {
                                "String": {
                                  "sval": "regnamespace",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "relkind",
                              },
                            },
                          ],
                          "location": 81,
                        },
                      },
                      "location": 89,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 91,
                          "sval": {
                            "sval": "r",
                          },
                        },
                      },
                    },
                  },
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "SubLink": {
                            "location": 118,
                            "subLinkType": "ANY_SUBLINK",
                            "subselect": {
                              "SelectStmt": {
                                "fromClause": [
                                  {
                                    "RangeVar": {
                                      "inh": true,
                                      "location": 147,
                                      "relname": "pg_index",
                                      "relpersistence": "p",
                                    },
                                  },
                                ],
                                "limitOption": "LIMIT_OPTION_DEFAULT",
                                "op": "SETOP_NONE",
                                "targetList": [
                                  {
                                    "ResTarget": {
                                      "location": 133,
                                      "val": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "indrelid",
                                              },
                                            },
                                          ],
                                          "location": 133,
                                        },
                                      },
                                    },
                                  },
                                ],
                                "whereClause": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "indisprimary",
                                        },
                                      },
                                    ],
                                    "location": 162,
                                  },
                                },
                              },
                            },
                            "testexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "pg_class",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "oid",
                                    },
                                  },
                                ],
                                "location": 105,
                              },
                            },
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 118,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 77,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`misc_sanity.sql > line 69 1`] = `
[
  "SELECT relname
FROM pg_class c JOIN pg_index i ON c.oid = i.indexrelid
WHERE relnamespace = 'pg_catalog'::regnamespace AND relkind = 'i'
      AND i.indisunique
      AND c.oid NOT IN (SELECT conindid FROM pg_constraint)
ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "c",
                      },
                      "inh": true,
                      "location": 20,
                      "relname": "pg_class",
                      "relpersistence": "p",
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 50,
                        },
                      },
                      "location": 56,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "indexrelid",
                              },
                            },
                          ],
                          "location": 58,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "i",
                      },
                      "inh": true,
                      "location": 36,
                      "relname": "pg_index",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 230,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "relname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "relnamespace",
                              },
                            },
                          ],
                          "location": 77,
                        },
                      },
                      "location": 90,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 92,
                              "sval": {
                                "sval": "pg_catalog",
                              },
                            },
                          },
                          "location": 104,
                          "typeName": {
                            "location": 106,
                            "names": [
                              {
                                "String": {
                                  "sval": "regnamespace",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "relkind",
                              },
                            },
                          ],
                          "location": 123,
                        },
                      },
                      "location": 131,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 133,
                          "sval": {
                            "sval": "i",
                          },
                        },
                      },
                    },
                  },
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "indisunique",
                          },
                        },
                      ],
                      "location": 147,
                    },
                  },
                  {
                    "BoolExpr": {
                      "args": [
                        {
                          "SubLink": {
                            "location": 177,
                            "subLinkType": "ANY_SUBLINK",
                            "subselect": {
                              "SelectStmt": {
                                "fromClause": [
                                  {
                                    "RangeVar": {
                                      "inh": true,
                                      "location": 206,
                                      "relname": "pg_constraint",
                                      "relpersistence": "p",
                                    },
                                  },
                                ],
                                "limitOption": "LIMIT_OPTION_DEFAULT",
                                "op": "SETOP_NONE",
                                "targetList": [
                                  {
                                    "ResTarget": {
                                      "location": 192,
                                      "val": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "conindid",
                                              },
                                            },
                                          ],
                                          "location": 192,
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            "testexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "c",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "oid",
                                    },
                                  },
                                ],
                                "location": 171,
                              },
                            },
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 177,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 119,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
